# xmlriver-mcp

./: .gitignore  .mcp-submit-state.json  CHANGELOG.md  LICENSE  README.md  glama.json  pyproject.toml  server.json
.github/workflows/: publish.yml  test.yml
scripts/: insert_awesome_mcp_entry.py
tests/integration/: test_live_api.py
tests/unit/: test_account_tools.py  test_client.py  test_xml_parser.py
xmlriver_mcp/: __init__.py  client.py  server.py  xml_parser.py
xmlriver_mcp/tools/: account.py  google.py  utility.py  wordstat.py  yandex.py
