[project]
name = "xmlriver-mcp"
version = "0.1.4"
description = "MCP server for XMLRiver — Google/Yandex SERP parsing and Wordstat frequency data via XML API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Artem Gasparyan", email = "pod_ege@proton.me" }]
keywords = ["mcp", "xmlriver", "seo", "yandex", "google", "wordstat", "serp", "claude", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "fastmcp>=2.10.0",
    "httpx>=0.27",
    "tenacity>=8.2",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "pyright>=1.1",
    "respx>=0.21",
]

[project.scripts]
xmlriver-mcp = "xmlriver_mcp.server:main"

[project.urls]
Homepage = "https://github.com/artgas1/xmlriver-mcp"
Issues = "https://github.com/artgas1/xmlriver-mcp/issues"
Repository = "https://github.com/artgas1/xmlriver-mcp"
Changelog = "https://github.com/artgas1/xmlriver-mcp/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xmlriver_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PT", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]  # Cyrillic in strings/docstrings/comments OK for Russian SEO MCP

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.10"
include = ["xmlriver_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires live XMLRiver API (skip in unit run)",
]
